# ndk-videorecorder

./: settings.gradle
app/: build.gradle
app/cpp/: CMakeLists.txt  camera_preview_controller.h  camera_preview_scheduler_caller.h  com_wind_ndk_camera_CameraPreviewScheduler.cpp  com_wind_ndk_camera_CameraPreviewScheduler.h
app/cpp/camera_preview/: camera_info.h  preview_renderer.cpp  screen_filter.cpp  screen_filter.h
app/cpp/encoder/: video_encoder_adapter.cpp
app/cpp/encoder/soft/: soft_video_encoder_adapter.cpp  soft_video_encoder_adapter.h  x264_encoder.h
app/cpp/libgles/egl/: base_egl_surface.h  gl_offscreen_surface.h  gl_surface.h  offscreen_surface.cpp  window_surface.h
app/cpp/libgles/gles/: base_fbo_filter.cpp  gl_shaders.h  gl_utils.cpp  gl_utils.h  rgb_to_yuy2_filter.cpp  rgb_to_yuy2_filter.h  texture.cpp
app/cpp/libs/handler/: CMakeLists.txt  loop_thread.cpp  message.cpp  message.h
app/src/androidTest/java/com/wind/ndk/video/recorder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_wind_ndk_camera_VideoRecorder.cpp  recorder.cpp  video_consumer.cpp  video_consumer.h  video_packet_pool.cpp  video_packet_pool.h  video_publisher.cpp  video_publisher.h
app/src/main/cpp/audio/: CMakeLists.txt  audio_encoder.cpp  audio_encoder.h  audio_encoder_adapter.cpp  audio_encoder_adapter.h  audio_frame.h  audio_process_encoder_adapter.cpp  audio_process_encoder_adapter.h  com_wind_ndk_audio_recorder_AudioEncoder.cpp  com_wind_ndk_audio_recorder_AudioEncoder.h  com_wind_ndk_audio_recorder_PcmCollector.cpp  pcm_collector.cpp  pcm_collector.h
app/src/main/cpp/audio/merger/: music_merger.cpp  music_merger.h
app/src/main/cpp/audio/player/: audio_decoder.cpp  audio_decoder.h  audio_track_player.cpp  audio_track_player.h  com_wind_ndk_audio_player_AudioTrackPlayer.cpp  com_wind_ndk_audio_player_AudioTrackPlayer.h
app/src/main/cpp/camera_preview/: camera_filter.cpp  camera_filter.h  camera_info.cpp  camera_preview_controller.cpp  camera_preview_controller.h  camera_preview_scheduler_caller.cpp  camera_preview_scheduler_caller.h  com_wind_ndk_camera_CameraPreviewScheduler.cpp  com_wind_ndk_camera_CameraPreviewScheduler.h  preview_renderer.cpp  preview_renderer.h
app/src/main/cpp/encoder/: video_encoder_adapter.cpp  video_encoder_adapter.h  video_frame.cpp  video_frame.h
app/src/main/cpp/encoder/soft/: copy_texture_renderer.cpp  copy_texture_renderer.h  h264_util.h  soft_video_encoder_adapter.cpp  soft_video_encoder_adapter.h  x264_encoder.cpp  x264_encoder.h  x264_parser.cpp  x264_parser.h
app/src/main/cpp/encoder/soft/color_conversion/: color_conversion.h  color_conversion_armv7a.cpp
app/src/main/cpp/jni/: com_wind_ndk_camera_CameraPreviewScheduler.cpp
app/src/main/cpp/libgles/: CMakeLists.txt
app/src/main/cpp/libgles/egl/: base_egl_surface.cpp  egl_core.cpp  egl_core.h  gl_offscreen_surface.cpp  gl_renderer.h  gl_surface.cpp  offscreen_surface.h  window_surface.cpp
app/src/main/cpp/libgles/gles/: base_fbo_filter.cpp  base_fbo_filter.h  base_filter.cpp  base_filter.h  texture.h
app/src/main/cpp/libs/blocking_queue/: blocking_queue.h
app/src/main/cpp/libs/handler/: handler.cpp  handler.h  loop_thread.h  looper.cpp  looper.h  message_queue.cpp  message_queue.h
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/cpp/utils/: thread.cpp  thread.h  time.h  types.h
app/src/main/java/com/wind/ndk/: Combine.kt  Interactor.kt
app/src/main/java/com/wind/ndk/audio/player/: AudioTrackPlayer.kt
app/src/main/java/com/wind/ndk/audio/recorder/: AudioConfigurationException.kt  AudioEncoder.kt  AudioRecordPermissionDeniedException.kt  AudioRecorder.kt  PcmCollector.kt
app/src/main/java/com/wind/ndk/camera/: CameraException.kt  CameraInfo.kt  CameraPreviewScheduler.kt  CameraPreviewView.kt  VideoCamera.kt  VideoRecorder.kt
app/src/main/java/com/wind/ndk/video/recorder/: CameraView.kt  MainActivity.kt  NavExt.kt  RecordScreen.kt  RecordViewState.kt  RecordingTimeInteractor.kt  SongInteractor.kt  SongsScreen.kt  VideoRecordViewModel.kt
app/src/main/java/com/wind/ndk/video/recorder/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/wind/ndk/video/recorder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
